--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
           distribution: zulu
       - name: Set up Gradle
         uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: current
       - name: Build with Gradle
         run: ./gradlew shadowJar
       - name: Set up Docker Buildx
