--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,8 @@ jobs:
       - name: Set up Gradle
         uses: gradle/gradle-build-action@v2
         with:
+          arguments: shadowJar
           gradle-version: current
-      - name: Build with Gradle
-        run: ./gradlew shadowJar
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Log into Docker Hub
@@ -34,7 +33,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: .
           labels: ${{ steps.extract-docker-metadata.outputs.labels }}
           push: true
           tags: ${{ steps.extract-docker-metadata.outputs.tags }}
