--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,31 +8,18 @@ jobs:
     steps:
       - name: Check out release tag
         uses: actions/checkout@v2
-      - name: Set up Java
-        uses: actions/setup-java@v3
-        with:
-          java-version: '15'
-          distribution: zulu
-      - name: Set up Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: shadowJar
-          gradle-version: current
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
       - name: Log into Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
-      - name: Extract Docker image metadata
-        id: extract-docker-metadata
-        uses: docker/metadata-action@v3
+      - name: Set up Java
+        uses: actions/setup-java@v3
         with:
-          images: blolol/wheaties-brain-java
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+          java-version: '15'
+          distribution: zulu
+      - name: Build and publish with Gradle
+        uses: gradle/gradle-build-action@v2
         with:
-          labels: ${{ steps.extract-docker-metadata.outputs.labels }}
-          push: true
-          tags: ${{ steps.extract-docker-metadata.outputs.tags }}
+          arguments: shadowJar docker dockerPush dockerPushLatest
+          gradle-version: current
